stochasticSimulation/src/parsers/MiTLParser.java
package parsers;

// $ANTLR 3.5-rc-2 /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g 2015-03-09 18:14:56

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class MiTLParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "BOOL", "COMMA", "COMMENT", 
		"CONST", "DIV", "DOUBLE", "EQ", "EXPONENT", "F", "FALSE", "FLOAT", "G", 
		"GE", "GT", "ID", "INT", "INTEGER", "LBRAT", "LE", "LPAR", "LT", "MINUS", 
		"MULT", "NEQ", "NEWLINE", "NOT", "OR", "PLUS", "RBRAT", "RPAR", "SEMICOLON", 
		"TRUE", "U", "WS"
	};
	public static final int EOF=-1;
	public static final int AND=4;
	public static final int BOOL=5;
	public static final int COMMA=6;
	public static final int COMMENT=7;
	public static final int CONST=8;
	public static final int DIV=9;
	public static final int DOUBLE=10;
	public static final int EQ=11;
	public static final int EXPONENT=12;
	public static final int F=13;
	public static final int FALSE=14;
	public static final int FLOAT=15;
	public static final int G=16;
	public static final int GE=17;
	public static final int GT=18;
	public static final int ID=19;
	public static final int INT=20;
	public static final int INTEGER=21;
	public static final int LBRAT=22;
	public static final int LE=23;
	public static final int LPAR=24;
	public static final int LT=25;
	public static final int MINUS=26;
	public static final int MULT=27;
	public static final int NEQ=28;
	public static final int NEWLINE=29;
	public static final int NOT=30;
	public static final int OR=31;
	public static final int PLUS=32;
	public static final int RBRAT=33;
	public static final int RPAR=34;
	public static final int SEMICOLON=35;
	public static final int TRUE=36;
	public static final int U=37;
	public static final int WS=38;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public MiTLParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public MiTLParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return MiTLParser.tokenNames; }
	@Override public String getGrammarFileName() { return "/home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g"; }


	public static class eval_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "eval"
	// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:10:1: eval : statementList ;
	public final MiTLParser.eval_return eval() throws RecognitionException {
		MiTLParser.eval_return retval = new MiTLParser.eval_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope statementList1 =null;


		try {
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:10:6: ( statementList )
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:10:8: statementList
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_statementList_in_eval29);
			statementList1=statementList();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, statementList1.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "eval"


	public static class statementList_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statementList"
	// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:14:1: statementList : ( NEWLINE !)* ( statement )+ ;
	public final MiTLParser.statementList_return statementList() throws RecognitionException {
		MiTLParser.statementList_return retval = new MiTLParser.statementList_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token NEWLINE2=null;
		ParserRuleReturnScope statement3 =null;

		Object NEWLINE2_tree=null;

		try {
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:15:2: ( ( NEWLINE !)* ( statement )+ )
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:15:4: ( NEWLINE !)* ( statement )+
			{
			root_0 = (Object)adaptor.nil();


			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:15:11: ( NEWLINE !)*
			loop1:
			while (true) {
				int alt1=2;
				int LA1_0 = input.LA(1);
				if ( (LA1_0==NEWLINE) ) {
					alt1=1;
				}

				switch (alt1) {
				case 1 :
					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:15:11: NEWLINE !
					{
					NEWLINE2=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_statementList40); if (state.failed) return retval;
					}
					break;

				default :
					break loop1;
				}
			}

			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:15:14: ( statement )+
			int cnt2=0;
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==CONST||(LA2_0 >= F && LA2_0 <= G)||LA2_0==ID||LA2_0==INTEGER||LA2_0==LPAR||LA2_0==MINUS||LA2_0==NOT||LA2_0==TRUE) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:15:14: statement
					{
					pushFollow(FOLLOW_statement_in_statementList44);
					statement3=statement();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, statement3.getTree());

					}
					break;

				default :
					if ( cnt2 >= 1 ) break loop2;
					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee = new EarlyExitException(2, input);
					throw eee;
				}
				cnt2++;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statementList"


	public static class statement_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "statement"
	// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:18:1: statement : ( declaration ( NEWLINE !)+ | exprOR ( NEWLINE !)+ );
	public final MiTLParser.statement_return statement() throws RecognitionException {
		MiTLParser.statement_return retval = new MiTLParser.statement_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token NEWLINE5=null;
		Token NEWLINE7=null;
		ParserRuleReturnScope declaration4 =null;
		ParserRuleReturnScope exprOR6 =null;

		Object NEWLINE5_tree=null;
		Object NEWLINE7_tree=null;

		try {
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:19:2: ( declaration ( NEWLINE !)+ | exprOR ( NEWLINE !)+ )
			int alt5=2;
			int LA5_0 = input.LA(1);
			if ( (LA5_0==CONST) ) {
				alt5=1;
			}
			else if ( ((LA5_0 >= F && LA5_0 <= G)||LA5_0==ID||LA5_0==INTEGER||LA5_0==LPAR||LA5_0==MINUS||LA5_0==NOT||LA5_0==TRUE) ) {
				alt5=2;
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 5, 0, input);
				throw nvae;
			}

			switch (alt5) {
				case 1 :
					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:19:4: declaration ( NEWLINE !)+
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_declaration_in_statement56);
					declaration4=declaration();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, declaration4.getTree());

					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:19:23: ( NEWLINE !)+
					int cnt3=0;
					loop3:
					while (true) {
						int alt3=2;
						int LA3_0 = input.LA(1);
						if ( (LA3_0==NEWLINE) ) {
							alt3=1;
						}

						switch (alt3) {
						case 1 :
							// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:19:23: NEWLINE !
							{
							NEWLINE5=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_statement58); if (state.failed) return retval;
							}
							break;

						default :
							if ( cnt3 >= 1 ) break loop3;
							if (state.backtracking>0) {state.failed=true; return retval;}
							EarlyExitException eee = new EarlyExitException(3, input);
							throw eee;
						}
						cnt3++;
					}

					}
					break;
				case 2 :
					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:20:4: exprOR ( NEWLINE !)+
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_exprOR_in_statement65);
					exprOR6=exprOR();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, exprOR6.getTree());

					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:20:18: ( NEWLINE !)+
					int cnt4=0;
					loop4:
					while (true) {
						int alt4=2;
						int LA4_0 = input.LA(1);
						if ( (LA4_0==NEWLINE) ) {
							alt4=1;
						}

						switch (alt4) {
						case 1 :
							// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:20:18: NEWLINE !
							{
							NEWLINE7=(Token)match(input,NEWLINE,FOLLOW_NEWLINE_in_statement67); if (state.failed) return retval;
							}
							break;

						default :
							if ( cnt4 >= 1 ) break loop4;
							if (state.backtracking>0) {state.failed=true; return retval;}
							EarlyExitException eee = new EarlyExitException(4, input);
							throw eee;
						}
						cnt4++;
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "statement"


	public static class declaration_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "declaration"
	// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:23:1: declaration : ( CONST ^ DOUBLE ID ( '=' ! ( INTEGER | FLOAT ) )? SEMICOLON !| CONST ^ INT ID ( '=' ! INTEGER )? SEMICOLON !| CONST ^ BOOL ID ( '=' ! ( TRUE | FALSE ) )? SEMICOLON !);
	public final MiTLParser.declaration_return declaration() throws RecognitionException {
		MiTLParser.declaration_return retval = new MiTLParser.declaration_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token CONST8=null;
		Token DOUBLE9=null;
		Token ID10=null;
		Token char_literal11=null;
		Token set12=null;
		Token SEMICOLON13=null;
		Token CONST14=null;
		Token INT15=null;
		Token ID16=null;
		Token char_literal17=null;
		Token INTEGER18=null;
		Token SEMICOLON19=null;
		Token CONST20=null;
		Token BOOL21=null;
		Token ID22=null;
		Token char_literal23=null;
		Token set24=null;
		Token SEMICOLON25=null;

		Object CONST8_tree=null;
		Object DOUBLE9_tree=null;
		Object ID10_tree=null;
		Object char_literal11_tree=null;
		Object set12_tree=null;
		Object SEMICOLON13_tree=null;
		Object CONST14_tree=null;
		Object INT15_tree=null;
		Object ID16_tree=null;
		Object char_literal17_tree=null;
		Object INTEGER18_tree=null;
		Object SEMICOLON19_tree=null;
		Object CONST20_tree=null;
		Object BOOL21_tree=null;
		Object ID22_tree=null;
		Object char_literal23_tree=null;
		Object set24_tree=null;
		Object SEMICOLON25_tree=null;

		try {
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:24:2: ( CONST ^ DOUBLE ID ( '=' ! ( INTEGER | FLOAT ) )? SEMICOLON !| CONST ^ INT ID ( '=' ! INTEGER )? SEMICOLON !| CONST ^ BOOL ID ( '=' ! ( TRUE | FALSE ) )? SEMICOLON !)
			int alt9=3;
			int LA9_0 = input.LA(1);
			if ( (LA9_0==CONST) ) {
				switch ( input.LA(2) ) {
				case DOUBLE:
					{
					alt9=1;
					}
					break;
				case INT:
					{
					alt9=2;
					}
					break;
				case BOOL:
					{
					alt9=3;
					}
					break;
				default:
					if (state.backtracking>0) {state.failed=true; return retval;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 9, 1, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
			}

			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 9, 0, input);
				throw nvae;
			}

			switch (alt9) {
				case 1 :
					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:24:4: CONST ^ DOUBLE ID ( '=' ! ( INTEGER | FLOAT ) )? SEMICOLON !
					{
					root_0 = (Object)adaptor.nil();


					CONST8=(Token)match(input,CONST,FOLLOW_CONST_in_declaration80); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					CONST8_tree = (Object)adaptor.create(CONST8);
					root_0 = (Object)adaptor.becomeRoot(CONST8_tree, root_0);
					}

					DOUBLE9=(Token)match(input,DOUBLE,FOLLOW_DOUBLE_in_declaration83); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					DOUBLE9_tree = (Object)adaptor.create(DOUBLE9);
					adaptor.addChild(root_0, DOUBLE9_tree);
					}

					ID10=(Token)match(input,ID,FOLLOW_ID_in_declaration85); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					ID10_tree = (Object)adaptor.create(ID10);
					adaptor.addChild(root_0, ID10_tree);
					}

					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:24:21: ( '=' ! ( INTEGER | FLOAT ) )?
					int alt6=2;
					int LA6_0 = input.LA(1);
					if ( (LA6_0==EQ) ) {
						alt6=1;
					}
					switch (alt6) {
						case 1 :
							// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:24:22: '=' ! ( INTEGER | FLOAT )
							{
							char_literal11=(Token)match(input,EQ,FOLLOW_EQ_in_declaration88); if (state.failed) return retval;
							set12=input.LT(1);
							if ( input.LA(1)==FLOAT||input.LA(1)==INTEGER ) {
								input.consume();
								if ( state.backtracking==0 ) adaptor.addChild(root_0, (Object)adaptor.create(set12));
								state.errorRecovery=false;
								state.failed=false;
							}
							else {
								if (state.backtracking>0) {state.failed=true; return retval;}
								MismatchedSetException mse = new MismatchedSetException(null,input);
								throw mse;
							}
							}
							break;

					}

					SEMICOLON13=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_declaration101); if (state.failed) return retval;
					}
					break;
				case 2 :
					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:25:4: CONST ^ INT ID ( '=' ! INTEGER )? SEMICOLON !
					{
					root_0 = (Object)adaptor.nil();


					CONST14=(Token)match(input,CONST,FOLLOW_CONST_in_declaration107); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					CONST14_tree = (Object)adaptor.create(CONST14);
					root_0 = (Object)adaptor.becomeRoot(CONST14_tree, root_0);
					}

					INT15=(Token)match(input,INT,FOLLOW_INT_in_declaration110); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					INT15_tree = (Object)adaptor.create(INT15);
					adaptor.addChild(root_0, INT15_tree);
					}

					ID16=(Token)match(input,ID,FOLLOW_ID_in_declaration112); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					ID16_tree = (Object)adaptor.create(ID16);
					adaptor.addChild(root_0, ID16_tree);
					}

					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:25:18: ( '=' ! INTEGER )?
					int alt7=2;
					int LA7_0 = input.LA(1);
					if ( (LA7_0==EQ) ) {
						alt7=1;
					}
					switch (alt7) {
						case 1 :
							// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:25:19: '=' ! INTEGER
							{
							char_literal17=(Token)match(input,EQ,FOLLOW_EQ_in_declaration115); if (state.failed) return retval;
							INTEGER18=(Token)match(input,INTEGER,FOLLOW_INTEGER_in_declaration118); if (state.failed) return retval;
							if ( state.backtracking==0 ) {
							INTEGER18_tree = (Object)adaptor.create(INTEGER18);
							adaptor.addChild(root_0, INTEGER18_tree);
							}

							}
							break;

					}

					SEMICOLON19=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_declaration122); if (state.failed) return retval;
					}
					break;
				case 3 :
					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:26:4: CONST ^ BOOL ID ( '=' ! ( TRUE | FALSE ) )? SEMICOLON !
					{
					root_0 = (Object)adaptor.nil();


					CONST20=(Token)match(input,CONST,FOLLOW_CONST_in_declaration128); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					CONST20_tree = (Object)adaptor.create(CONST20);
					root_0 = (Object)adaptor.becomeRoot(CONST20_tree, root_0);
					}

					BOOL21=(Token)match(input,BOOL,FOLLOW_BOOL_in_declaration131); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					BOOL21_tree = (Object)adaptor.create(BOOL21);
					adaptor.addChild(root_0, BOOL21_tree);
					}

					ID22=(Token)match(input,ID,FOLLOW_ID_in_declaration133); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					ID22_tree = (Object)adaptor.create(ID22);
					adaptor.addChild(root_0, ID22_tree);
					}

					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:26:19: ( '=' ! ( TRUE | FALSE ) )?
					int alt8=2;
					int LA8_0 = input.LA(1);
					if ( (LA8_0==EQ) ) {
						alt8=1;
					}
					switch (alt8) {
						case 1 :
							// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:26:20: '=' ! ( TRUE | FALSE )
							{
							char_literal23=(Token)match(input,EQ,FOLLOW_EQ_in_declaration136); if (state.failed) return retval;
							set24=input.LT(1);
							if ( input.LA(1)==FALSE||input.LA(1)==TRUE ) {
								input.consume();
								if ( state.backtracking==0 ) adaptor.addChild(root_0, (Object)adaptor.create(set24));
								state.errorRecovery=false;
								state.failed=false;
							}
							else {
								if (state.backtracking>0) {state.failed=true; return retval;}
								MismatchedSetException mse = new MismatchedSetException(null,input);
								throw mse;
							}
							}
							break;

					}

					SEMICOLON25=(Token)match(input,SEMICOLON,FOLLOW_SEMICOLON_in_declaration149); if (state.failed) return retval;
					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "declaration"


	public static class exprOR_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "exprOR"
	// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:33:1: exprOR : exprAND ( OR ^ exprAND )* ;
	public final MiTLParser.exprOR_return exprOR() throws RecognitionException {
		MiTLParser.exprOR_return retval = new MiTLParser.exprOR_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token OR27=null;
		ParserRuleReturnScope exprAND26 =null;
		ParserRuleReturnScope exprAND28 =null;

		Object OR27_tree=null;

		try {
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:34:2: ( exprAND ( OR ^ exprAND )* )
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:34:4: exprAND ( OR ^ exprAND )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_exprAND_in_exprOR166);
			exprAND26=exprAND();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, exprAND26.getTree());

			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:34:12: ( OR ^ exprAND )*
			loop10:
			while (true) {
				int alt10=2;
				int LA10_0 = input.LA(1);
				if ( (LA10_0==OR) ) {
					alt10=1;
				}

				switch (alt10) {
				case 1 :
					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:34:13: OR ^ exprAND
					{
					OR27=(Token)match(input,OR,FOLLOW_OR_in_exprOR169); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					OR27_tree = (Object)adaptor.create(OR27);
					root_0 = (Object)adaptor.becomeRoot(OR27_tree, root_0);
					}

					pushFollow(FOLLOW_exprAND_in_exprOR172);
					exprAND28=exprAND();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, exprAND28.getTree());

					}
					break;

				default :
					break loop10;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "exprOR"


	public static class exprAND_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "exprAND"
	// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:37:1: exprAND : mitlTerm ( AND ^ mitlTerm )* ;
	public final MiTLParser.exprAND_return exprAND() throws RecognitionException {
		MiTLParser.exprAND_return retval = new MiTLParser.exprAND_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token AND30=null;
		ParserRuleReturnScope mitlTerm29 =null;
		ParserRuleReturnScope mitlTerm31 =null;

		Object AND30_tree=null;

		try {
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:38:2: ( mitlTerm ( AND ^ mitlTerm )* )
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:38:4: mitlTerm ( AND ^ mitlTerm )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_mitlTerm_in_exprAND186);
			mitlTerm29=mitlTerm();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, mitlTerm29.getTree());

			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:38:13: ( AND ^ mitlTerm )*
			loop11:
			while (true) {
				int alt11=2;
				int LA11_0 = input.LA(1);
				if ( (LA11_0==AND) ) {
					alt11=1;
				}

				switch (alt11) {
				case 1 :
					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:38:14: AND ^ mitlTerm
					{
					AND30=(Token)match(input,AND,FOLLOW_AND_in_exprAND189); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					AND30_tree = (Object)adaptor.create(AND30);
					root_0 = (Object)adaptor.becomeRoot(AND30_tree, root_0);
					}

					pushFollow(FOLLOW_mitlTerm_in_exprAND192);
					mitlTerm31=mitlTerm();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, mitlTerm31.getTree());

					}
					break;

				default :
					break loop11;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "exprAND"


	public static class mitlTerm_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "mitlTerm"
	// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:43:1: mitlTerm : ( booelanAtomic ( U ^ timeBound booelanAtomic )? | F ^ timeBound booelanAtomic | G ^ timeBound booelanAtomic );
	public final MiTLParser.mitlTerm_return mitlTerm() throws RecognitionException {
		MiTLParser.mitlTerm_return retval = new MiTLParser.mitlTerm_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token U33=null;
		Token F36=null;
		Token G39=null;
		ParserRuleReturnScope booelanAtomic32 =null;
		ParserRuleReturnScope timeBound34 =null;
		ParserRuleReturnScope booelanAtomic35 =null;
		ParserRuleReturnScope timeBound37 =null;
		ParserRuleReturnScope booelanAtomic38 =null;
		ParserRuleReturnScope timeBound40 =null;
		ParserRuleReturnScope booelanAtomic41 =null;

		Object U33_tree=null;
		Object F36_tree=null;
		Object G39_tree=null;

		try {
			// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:43:10: ( booelanAtomic ( U ^ timeBound booelanAtomic )? | F ^ timeBound booelanAtomic | G ^ timeBound booelanAtomic )
			int alt13=3;
			switch ( input.LA(1) ) {
			case FALSE:
			case FLOAT:
			case ID:
			case INTEGER:
			case LPAR:
			case MINUS:
			case NOT:
			case TRUE:
				{
				alt13=1;
				}
				break;
			case F:
				{
				alt13=2;
				}
				break;
			case G:
				{
				alt13=3;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 13, 0, input);
				throw nvae;
			}
			switch (alt13) {
				case 1 :
					// /home/dmilios/Dropbox/Documents/postdoc/antlr/MiTL.g:43:12: booelanAtomic ( U ^ timeBound booelanAtomic )?
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_booelanAtomic_in_mitlTerm208);
					booelanAtomic32=booelanAtomic();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, booelanAtomic32.getTree());
